# TFG-Final-Degree-Project

./: README.md
envio_bmi160/: README.rst  nrf5340dk_nrf5340_cpuapp.overlay  prj.conf
envio_bmi160/boards/: nrf5340dk_nrf5340_cpuapp.overlay
envio_bmi160/src/: main.c  zb_zcl_custom_cluster.c
envio_string/: README.rst  prj.conf
envio_string/include/: zb_dimmer_switch.h
envio_string/src/: main.c
recibo_bmi160/: CMakeLists.txt  README.rst  prj.conf
recibo_bmi160/include/: bmi160.h  zb_dimmable_light.h
recibo_bmi160/src/: bmi160.c  main.c  zb_zcl_custom_cluster.c
recibo_string/: CMakeLists.txt  README.rst  nrf5340dk_nrf5340_cpuapp.overlay  prj.conf
recibo_string/boards/: nrf5340dk_nrf5340_cpuapp.overlay
recibo_string/include/: lcd1602a.h
recibo_string/src/: lcd1602a.c  main.c
